# openapi.json
@@ -27,21 +27,26 @@
                 "type": "object",
                 "properties": {
                   "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Event name"
                   },
                   "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Event description"
                   },
                   "startDate": {
                     "type": "string",
-                    "format": "date-time"
+                    "format": "date-time",
+                    "example": "2025-04-01T01:00:00.000Z"
                   },
                   "endDate": {
                     "type": "string",
-                    "format": "date-time"
+                    "format": "date-time",
+                    "example": "2025-04-02T01:00:00.000Z"
                   },
                   "location": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Event location"
                   }
                 },
                 "required": [
@@ -136,21 +141,26 @@
                 "type": "object",
                 "properties": {
                   "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Event name"
                   },
                   "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Event description"
                   },
                   "startDate": {
                     "type": "string",
-                    "format": "date-time"
+                    "format": "date-time",
+                    "example": "2025-04-01T01:00:00.000Z"
                   },
                   "endDate": {
                     "type": "string",
-                    "format": "date-time"
+                    "format": "date-time",
+                    "example": "2025-04-02T01:00:00.000Z"
                   },
                   "location": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Event location"
                   }
                 },
                 "required": [
@@ -165,8 +175,8 @@
           }
         },
         "responses": {
-          "201": {
-            "description": "Created",
+          "200": {
+            "description": "Updated",
             "content": {
               "application/json": {
                 "schema": {
@@ -204,6 +214,41 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "operationId": "deleteEvent",
+        "tags": [
+          "event"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "eventId",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "deleted"
           },
           "400": {
             "description": "Bad Request"
